force-app/main/default/objects/Contact/fields/Fit_Score_help_field__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_help_field__c</fullName>
    <formula>If((Fit_Score_Test__c=text(SW_Fit_Score__c)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fit Score help field</label>
    <type>Checkbox</type>
</CustomField>