force-app/main/default/objects/Contact/fields/Fit_Score_Industry_Department_Tier__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_Industry_Department_Tier__c</fullName>
    <description>MIS-5711</description>
    <label>Fit Score Industry Department Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>