force-app/main/default/objects/Contact/fields/Fit_Score_Last_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_Last_Request_Date__c</fullName>
    <label>Fit Score Last Request Date</label>
    <type>Date</type>
</CustomField>