force-app/main/default/objects/Contact/fields/Form_Complete_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete_URL__c</fullName>
    <description>Used to track the complete URL incl. all parameters whatsoever.</description>
    <label>Form Complete URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>