force-app/main/default/objects/Contact/fields/Form_Location_Breadcrumb__c.field-meta.xml
<CustomField>
    <fullName>Form_Location_Breadcrumb__c</fullName>
    <label>Form Location Breadcrumb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>