force-app/main/default/objects/Contact/fields/Form_Submission_Date_Help_Field__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Date_Help_Field__c</fullName>
    <formula>Datevalue(Form_Submission_Date_and_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Submission Date Help Field</label>
    <type>Date</type>
</CustomField>