force-app/main/default/objects/Contact/fields/fr_Custom_Categories_First_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>fr_Custom_Categories_First_Created_Date__c</fullName>
    <formula>BI_Data__r.Custom_Categories_First_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Categories First Created Date</label>
    <type>DateTime</type>
</CustomField>