force-app/main/default/objects/Contact/fields/fr_Custom_Dashboards_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>fr_Custom_Dashboards_Last_Used_Date__c</fullName>
    <formula>BI_Data__r.Custom_Categories_Last_Used_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Dashboards Last Used Date</label>
    <type>DateTime</type>
</CustomField>