force-app/main/default/objects/Contact/fields/fr_Custom_Keyword_Groups__c.field-meta.xml
<CustomField>
    <fullName>fr_Custom_Keyword_Groups__c</fullName>
    <formula>BI_Data__r.Custom_Keyword_Groups__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Keyword Groups</label>
    <type>Checkbox</type>
</CustomField>