force-app/main/default/objects/Contact/fields/fr_CustomCategories__c.field-meta.xml
<CustomField>
    <fullName>fr_CustomCategories__c</fullName>
    <formula>BI_Data__r.CustomCategories__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomCategories</label>
    <type>Checkbox</type>
</CustomField>