force-app/main/default/objects/Contact/fields/fr_CustomDashboards__c.field-meta.xml
<CustomField>
    <fullName>fr_CustomDashboards__c</fullName>
    <formula>BI_Data__r.CustomDashboards__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomDashboards</label>
    <type>Checkbox</type>
</CustomField>