force-app/main/default/objects/Contact/fields/fr_CustomKeywordGroups_First_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>fr_CustomKeywordGroups_First_CreatedDate__c</fullName>
    <formula>BI_Data__r.Custom_Keyword_Groups_First_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Keyword Groups First Created Date</label>
    <type>DateTime</type>
</CustomField>