force-app/main/default/objects/Contact/fields/fr_Fro_Return_User_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>fr_Fro_Return_User_Alert_Date__c</fullName>
    <formula>BI_Data__r.Fro_Return_User_Alert_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fro Return User Alert Date</label>
    <type>Date</type>
</CustomField>