force-app/main/default/objects/Contact/fields/fr_Last_Interesting_Activity__c.field-meta.xml
<CustomField>
    <fullName>fr_Last_Interesting_Activity__c</fullName>
    <formula>BI_Data__r.Last_Interesting_Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Interesting Activity</label>
    <type>Text</type>
</CustomField>