force-app/main/default/objects/Contact/fields/fr_Pro_User_Type__c.field-meta.xml
<CustomField>
    <fullName>fr_Pro_User_Type__c</fullName>
    <formula>TEXT( BI_Data__r.Pro_User_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro User Type</label>
    <type>Text</type>
</CustomField>