force-app/main/default/objects/Contact/fields/Fro_Return_User_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Fro_Return_User_Alert_Date__c</fullName>
    <label>Fro Return User Alert Date Old field</label>
    <type>Date</type>
</CustomField>