force-app/main/default/objects/Contact/fields/FullContact_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>FullContact_Company_Name__c</fullName>
    <label>FullContact Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>