force-app/main/default/objects/Contact/fields/Google_App_MDU__c.field-meta.xml
<CustomField>
    <fullName>Google_App_MDU__c</fullName>
    <label>Google App MDU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>