force-app/main/default/objects/Contact/fields/Groudon_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Call_Status__c</fullName>
    <label>Groudon Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>NTS (Need To Send)</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
            <value>
                <fullName>Enrichment_Ended</fullName>
                <label>Enrichment Ended</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>