force-app/main/default/objects/Contact/fields/Groudon_Employee_Max__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Employee_Max__c</fullName>
    <description>MIS-7697
Data is populated through Groudon, on lead creation or any new activity that triggers Groudon</description>
    <label>Groudon Employee Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>