force-app/main/default/objects/Contact/fields/Groudon_Pred_Reason__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Pred_Reason__c</fullName>
    <description>Data is populated through Groudon, on lead creation or any new activity that triggers Groudon: combined text field for demo and firmo
MIS-7760
MIS-7946 - Only demographic pred reason is relevant from converted lead.


Enrichment: New field from Groudon</description>
    <label>Groudon Pred Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>