force-app/main/default/objects/Contact/fields/gtmidnts__c.field-meta.xml
<CustomField>
    <fullName>gtmidnts__c</fullName>
    <label>gtmidnts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>