force-app/main/default/objects/Contact/fields/Has_an_app__c.field-meta.xml
<CustomField>
    <fullName>Has_an_app__c</fullName>
    <description>MIS-7233</description>
    <formula>Account.Has_an_app__c</formula>
    <label>Company has an app?</label>
    <type>Checkbox</type>
</CustomField>