force-app/main/default/objects/Contact/fields/Has_Mobile_App__c.field-meta.xml
<CustomField>
    <fullName>Has_Mobile_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Mobile App</label>
    <type>Checkbox</type>
</CustomField>