force-app/main/default/objects/Contact/fields/how_to_contact_user_primary__c.field-meta.xml
<CustomField>
    <fullName>how_to_contact_user_primary__c</fullName>
    <description>lead capture field</description>
    <inlineHelpText>lead capture field</inlineHelpText>
    <label>how to contact user primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>