force-app/main/default/objects/Contact/fields/Hyperlink_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Hyperlink_to_Contact__c</fullName>
    <description>MIS-4554</description>
    <formula>HYPERLINK(LEFT( $Api.Partner_Server_URL_520, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_520 ))&amp; Id ,  FirstName+&quot; &quot;+LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hyperlink to Contact</label>
    <type>Text</type>
</CustomField>