force-app/main/default/objects/Contact/fields/Incomplete_queue__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_queue__c</fullName>
    <label>Incomplete queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>