force-app/main/default/objects/Contact/fields/Industry_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Industry_Cluster__c</fullName>
    <description>MIS-995 SFMC</description>
    <formula>IF(
ISPICKVAL(Account.SW_Industry__c,&quot;Agency&quot;),
&apos;Agency&apos;,
IF(
OR(
ISPICKVAL(Account.SW_Industry__c,&quot;AdTech and AdNetwork&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;B2B Software&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Logistics and Shipping&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Payments&quot;)
),
&quot;B2B Services&quot;,
IF(
ISPICKVAL(Account.SW_Industry__c,&quot;Consulting and Market Research&quot;),
&quot;Consulting and Market Research&quot;,
IF(
ISPICKVAL(Account.SW_Industry__c,&quot;CPG, Food &amp; Beverages&quot;),
&quot;CPG&quot;,
IF(
ISPICKVAL(Account.SW_Industry__c,&quot;Financial services&quot;),
&quot;Financial services&quot;,
IF(
OR(
ISPICKVAL(Account.SW_Industry__c,&quot;Equity Research&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Hedge Funds and Asset Management&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Investment Banking&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Investors&quot;),
ISPICKVAL(Account.SW_Industry__c, &quot;Private Equity and Venture Capital&quot;)
),
&quot;Investors&quot;,
IF(
OR(
ISPICKVAL(Account.SW_Industry__c,&quot;Classifieds&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Media and Entertainment&quot;)
),
&quot;Publishers / Classifieds&quot;,
IF(
ISPICKVAL(Account.SW_Industry__c,&quot;Retail / eCommerce&quot;),
&quot;Retail and eCommerce&quot;,
IF(
ISPICKVAL(Account.SW_Industry__c,&quot;Travel and Hospitality&quot;),
&quot;Travel&quot;,
IF(
OR(
ISPICKVAL(Account.SW_Industry__c,&quot;Automotive and Transportation&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;B2C Internet Services&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Education&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Gambling / Gaming&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Other&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Pharma and Healthcare&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Government Public Sector &amp; Non Profit&quot;),
ISPICKVAL(Account.SW_Industry__c,&quot;Telecom and Hardware&quot;)
),
&quot;Tier 2&quot;,
&quot;&quot;
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Cluster</label>
    <type>Text</type>
</CustomField>