force-app/main/default/objects/Contact/fields/Industryregistration__c.field-meta.xml
<CustomField>
    <fullName>Industryregistration__c</fullName>
    <label>Industry_registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>