force-app/main/default/objects/Contact/fields/Inferred_Solution__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Solution__c</fullName>
    <label>Inferred Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Sales (SI)</fullName>
            </value>
            <value>
                <fullName>Agency (MI)</fullName>
            </value>
            <value>
                <fullName>Investors (II)</fullName>
            </value>
            <value>
                <fullName>Publishers &amp; Media</fullName>
            </value>
            <value>
                <fullName>AI / PI</fullName>
            </value>
            <value>
                <fullName>Marketing (MI)</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Shopper</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>