force-app/main/default/objects/Contact/fields/Inferred_Solution_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Solution_Suggestion__c</fullName>
    <label>Inferred Solution Suggestion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>marketing</fullName>
            </value>
            <value>
                <fullName>research</fullName>
            </value>
            <value>
                <fullName>sales</fullName>
            </value>
            <value>
                <fullName>investors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>