force-app/main/default/objects/Contact/fields/InsightEMail__c.field-meta.xml
<CustomField>
    <fullName>InsightEMail__c</fullName>
    <label>Insight E-Mail​</label>
    <type>Date</type>
</CustomField>