force-app/main/default/objects/Contact/fields/Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score__c</fullName>
    <formula>BI_Data__r.Intent_Score__c</formula>
    <label>Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>