force-app/main/default/objects/Contact/fields/Intent_Score_Feedback_Details__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Feedback_Details__c</fullName>
    <description>MIS-4061</description>
    <label>Intent Score - Feedback Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>