force-app/main/default/objects/Contact/fields/Intent_Score_Feedback_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Feedback_Timestamp__c</fullName>
    <description>MIS-4159</description>
    <label>Intent Score - Feedback Timestamp</label>
    <type>Date</type>
</CustomField>