force-app/main/default/objects/Contact/fields/Interested_in__c.field-meta.xml
<CustomField>
    <fullName>Interested_in__c</fullName>
    <description>MIS-5493</description>
    <label>Interested in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>42matters</fullName>
            </value>
            <value>
                <fullName>Admetricks</fullName>
            </value>
            <value>
                <fullName>Newslever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>