force-app/main/default/objects/Contact/fields/Interested_in_Display_Ads__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Display_Ads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Display Ads</label>
    <type>Checkbox</type>
</CustomField>