force-app/main/default/objects/Contact/fields/Interested_in_Sales_and_Leads__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Sales_and_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Sales and Leads</label>
    <type>Checkbox</type>
</CustomField>