force-app/main/default/objects/Contact/fields/Interested_in_SEO__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_SEO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in SEO</label>
    <type>Checkbox</type>
</CustomField>