force-app/main/default/objects/Contact/fields/Interested_in_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Social_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Social Media</label>
    <type>Checkbox</type>
</CustomField>