force-app/main/default/objects/Contact/fields/Is_Converted_By_Lean_Data__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_By_Lean_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field to indicate whether the contact was converted by lean data</description>
    <label>Is Converted By Lean Data</label>
    <type>Checkbox</type>
</CustomField>