force-app/main/default/objects/Contact/fields/Is_Pro__c.field-meta.xml
<CustomField>
    <fullName>Is_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pro</label>
    <type>Checkbox</type>
</CustomField>