force-app/main/default/objects/Contact/fields/Job_Titles_Persona_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Job_Titles_Persona_Calculated__c</fullName>
    <description>MIS-4553</description>
    <label>Job Titles Persona Calculated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>