force-app/main/default/objects/Contact/fields/Journey_Completed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Journey_Completed_Timestamp__c</fullName>
    <label>Journey Completed Timestamp</label>
    <type>DateTime</type>
</CustomField>