force-app/main/default/objects/Contact/fields/Keyword_cluster__c.field-meta.xml
<CustomField>
    <fullName>Keyword_cluster__c</fullName>
    <formula>BI_Data__r.Keyword_cluster__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Keyword cluster</label>
    <type>Text</type>
</CustomField>