force-app/main/default/objects/Contact/fields/KPIGoal__c.field-meta.xml
<CustomField>
    <fullName>KPIGoal__c</fullName>
    <label>KPI/Goal​</label>
    <length>255</length>
    <type>Text</type>
</CustomField>