force-app/main/default/objects/Contact/fields/KT_Task__c.field-meta.xml
<CustomField>
    <fullName>KT_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KT Task?</label>
    <type>Checkbox</type>
</CustomField>