force-app/main/default/objects/Contact/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <description>MIS-4105</description>
    <label>Landing Page</label>
    <type>TextArea</type>
</CustomField>