force-app/main/default/objects/Contact/fields/Last_Active_Session_PRO_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Active_Session_PRO_Date__c</fullName>
    <label>Last Active Session PRO Date</label>
    <type>Date</type>
</CustomField>