force-app/main/default/objects/Contact/fields/Last_Activity_Date_by_MIR__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_by_MIR__c</fullName>
    <description>MIS-6229</description>
    <label>Last Activity Date by MIR</label>
    <type>Date</type>
</CustomField>