force-app/main/default/objects/Contact/fields/Last_Activity_Date_by_Rep__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_by_Rep__c</fullName>
    <description>MIS-6356</description>
    <formula>IF(
				AND(ISBLANK(Last_Activity_Date_by_MIR__c),ISBLANK(Last_Activity_Date_by_GTM__c)), NULL,
				IF(
								OR(
												Last_Activity_Date_by_MIR__c &gt;= Last_Activity_Date_by_GTM__c,
								    AND(
												    NOT(ISBLANK(Last_Activity_Date_by_MIR__c)),
												    ISBLANK(Last_Activity_Date_by_GTM__c)
												    )
								    ), 
								Last_Activity_Date_by_MIR__c, Last_Activity_Date_by_GTM__c
								)
				)</formula>
    <label>Last Activity Date by Rep</label>
    <type>Date</type>
</CustomField>